Bug 1391430 - Image decoding should Use the surface's stride to determine a row's length.

Previously we ignored the stride of the surface and assumed it was
always 4 * width of the image. Some surfaces (e.g.
SourceSurfaceAlignedRawData) may have a larger stride to meet its
alignment requirements. As such, we should use the stride the surface
provides whenever possible over calculating it ourself.