image/Decoder.h
@@ -540,6 +540,7 @@ protected:
 
   uint8_t* mImageData;  // Pointer to image data in either Cairo or 8bit format
   uint32_t mImageDataLength;
+  int32_t mImageStride;
   uint32_t* mColormap;  // Current colormap to be used in Cairo format
   uint32_t mColormapSize;
 
